<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="344dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/now_cond"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:id="@+id/fragment_inner_constraint">

    <TextView
        android:id="@+id/clothes_suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clothes_suggestion"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/clothes_suggestion_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clothes_suggestion_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clothes_suggestion"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/cold_suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cold_suggestion"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clothes_suggestion_content"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/cold_suggestion_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cold_suggestion_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cold_suggestion"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/travel_sugegstion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_suggestion"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cold_suggestion_content"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/travel_sugegstion_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_suggestion_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/travel_sugegstion"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/work_out_suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_out_suggestion"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/travel_sugegstion_content"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/work_out_suggestion_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_out_suggestion_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/work_out_suggestion"
        android:layout_marginTop="8dp" />

    </android.support.constraint.ConstraintLayout>