<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/vis_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/vis"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/pcpn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/pcpn"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/wd_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/wd"
        app:layout_constraintLeft_toRightOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icons8_temperature"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:srcCompat="@mipmap/icons8_humidity"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:srcCompat="@mipmap/icons8_pressure"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="205dp"
        android:orientation="vertical" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:srcCompat="@mipmap/icons8_alps"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:srcCompat="@mipmap/icons8_water"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:srcCompat="@mipmap/icons8_wind"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView5" />

    <TextView
        android:id="@+id/hum_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hum"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/pres_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:text="@string/pres"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/fl_temp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:text="@string/fl"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/fl_temp_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/fl_temp_tv"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/hum_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/hum_tv" />

    <TextView
        android:id="@+id/pcpn_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/pcpn_tv" />

    <TextView
        android:id="@+id/wd_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/wd_tv" />

    <TextView
        android:id="@+id/pres_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/pres_tv" />

    <TextView
        android:id="@+id/vis_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/vis_tv"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        android:layout_marginLeft="8dp" />
</android.support.constraint.ConstraintLayout>